2019-06-07  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() add hooks to create _FillValue attribute after extrapolating to missing values

2019-06-06  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() add stubs for extrapolation to missing value

2019-06-05  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() re-use existing dmn_ids_out array to fix new AppVeyor breakage

	* Merge Filipe's patch to fix old AppVeyor breakage

2019-06-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha04: Taco Al Pastor';git push
	git tag -a 4.8.1-alpha04 -m 'ncremap --amwg_links, gss ntf n2s,	ECMWF IFS vrt ntp;ncks msh_fl';git push --tags

	* Verify vertical interpolation of ECMWF now works

	* Compensate for different definitions of hya? between ECMWF and CAM/EAM

	* Fix Newton-Raphson computation of Gaussian grid interfaces for n2s grids (including ECMWF)

2019-06-03  Charlie Zender  <zender@uci.edu>

	* Interpolation of hybrid grids from ECMWF IFS input files appears to work

2019-06-02  Charlie Zender  <zender@uci.edu>

	* Change --lnk_flg to true option with argument, add --amwg_links antonym flag to --no_amwg_links

	* nco_rgr.c print absolute convergence at last iteration step for failed Gaussian calculations

	* Add stubs to understand and interpolate hybrid grids from ECMWF IFS input files

	* Address warnings found by Pedro with MSVC Studio Version 19

2019-05-31  Charlie Zender  <zender@uci.edu>

	* Allow ncremap to work when ERWG is not found and not needed

2019-05-30 Henry Butowsky  <henryb@hush.com>

        * ncks --rgr msh_fl=msh.nc for SCRIP-formatted netCDF overlap mesh

2019-05-29  Charlie Zender  <zender@uci.edu>

	* Fix mis-formatted fprintf() statements

2019-05-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha03: Compy';git push