@@ -1,5 +1,7 @@
 2019-06-07  Charlie Zender  <zender@uci.edu>
 
+	* nco_ntp_vrt() missing value extrapolation works, still need to add _FillValue attribute and option
+
 	* nco_ntp_vrt() add hooks to create _FillValue attribute after extrapolating to missing values
 
 2019-06-06  Charlie Zender  <zender@uci.edu>
